--- a/Gulps/Gulps.entitlements
+++ b/Gulps/Gulps.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.it.fancypixel.BigGulp</string>
+		<string>group.com.teklabsco.Gulps</string>
 	</array>
 </dict>
 </plist>
