Modified name in config files to be Gulps and not BigGulp.

--- a/Gulps WatchKit Extension/Info.plist
+++ b/Gulps WatchKit Extension/Info.plist
@@ -36,7 +36,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.teklabsco.BigGulp.watchkitapp</string>
+			<string>com.teklabsco.Gulps.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
