--- a/Gulps WatchKit App/Info.plist
+++ b/Gulps WatchKit App/Info.plist
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.teklabsco.BigGulp</string>
+	<string>com.teklabsco.Gulps</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
