--- a/GulpsToday/GulpsToday.entitlements
+++ b/GulpsToday/GulpsToday.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.teklabsco.BigGulp</string>
+		<string>group.com.teklabsco.Gulps</string>
 	</array>
 </dict>
 </plist>
